Fixed up the status changes, ajax call now active and sending back results

--- a/css/queue.css
+++ b/css/queue.css
@@ -2,3 +2,13 @@
     color: #E8D741;
     font-weight: bold;
 }
+
+.update {
+    color: #577492;
+    font-weight: bold;
+}
+
+.success {
+    color: #608D4E;
+    font-weight: bold;
+}
